--- a/profile.css
+++ b/profile.css
@@ -9,7 +9,8 @@
 
 
 .contens1 {
-width: 1231.19px;
+max-width: 1240px;  
+width: 100%;
 margin-left: auto;
 margin-right: auto;
 }
@@ -24,7 +25,8 @@ margin-right: auto;
 
 .contens-inner {
   background-color: #dddd;
-  width: 1205.55px; 
+  max-width: 1205.55px
+  width: 100%; 
   height: 499.06px;
   margin-left: auto;
   margin-right: auto;
